target =blank set

--- a/index.html
+++ b/index.html
@@ -645,9 +645,9 @@
             </div>
             <div class="two">
                 <h4 style="color: blanchedalmond;">Connect us on....</h4>
-                <li><a href="https://www.facebook.com/"><img src="facebook.png" alt="">Facebook</a></li>
-                <li><a href="https://www.instagram.com/"><img src="insta.jfif" alt="">Instagram</a></li>
-                <li><a href="https://www.linkedin.com/home/?originalSubdomain=in"><img src="linkd.png" alt="">Linkedin</a></li>
+                <li><a href="https://www.facebook.com/" target="_blank"><img src="facebook.png" alt="">Facebook</a></li>
+                <li><a href="https://www.instagram.com/" target="_blank"><img src="insta.jfif" alt="">Instagram</a></li>
+                <li><a href="https://www.linkedin.com/home/?originalSubdomain=in" target="_blank"><img src="linkd.png" alt="">Linkedin</a></li>
             </div>
             <div class="backto">
            <a href=""> <img src="backtotop.png" alt="" width="40px " height="40px" ></a>
